--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
+<a routerLink="/bar">Bar Chart</a>
+<a routerLink="/area">Area Chart</a>
+<a routerLink="/pie">Pie Chart</a>
+
 <router-outlet></router-outlet>
-
-
-<app-bar-chart></app-bar-chart>
-<app-area-chart></app-area-chart>
-<app-pie-chart></app-pie-chart>
 
